feat(service): add overloaded addExpense methods for convenience and implement varargs for buld expense adding